XW-922 | Fix for jumping menu on discussion/desktop

--- a/front/main/app/styles/state/_no-scroll.scss
+++ b/front/main/app/styles/state/_no-scroll.scss
@@ -1,5 +1,6 @@
 .no-scroll {
-	overflow: hidden;
+	overflow-x: hidden;
+	overflow-y: scroll;
 	position: fixed;
 	width: 100%;
 	height: 100%;
